--- a/index.html
+++ b/index.html
@@ -9,10 +9,36 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Easybank landing page</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/app/scss/styles.css" />
+    <title>Newbank</title>
   </head>
   <body>
-    Home About Contact Blog Careers Request Invite Next generation digital
+    <header class="header">
+      <nav class="flex flex-jc-sb flex-ai-c">
+        <a href="#" class="header__logo">
+          <img src="/images/logo.svg" alt="logo" />
+        </a>
+        <a href="#" class="header__menu hide-for-desktop">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+        <div class="header__links hide-for-mobile">
+          <a href="#">Home</a><a href="#">About</a><a href="#">Contact</a
+          ><a href="#">Blog</a><a href="#">Careers</a>
+        </div>
+
+        <a href="#" class="button header__cta hide-for-mobile"
+          >Request Invite</a
+        >
+      </nav>
+    </header>
+    <!--
+         Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
     Request Invite Why choose Easybank? We leverage Open Banking to turn your
@@ -42,6 +68,7 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
+    <script src="/app/js/app.js"></script>
   </body>
 </html>
