--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/app/scss/styles.css" />
+    <link rel="stylesheet" href="app/scss/styles.css" />
     <title>EasyBank</title>
     <style>
       .attribution {
@@ -266,6 +266,6 @@
         </div>
       </div>
     </footer>
-    <script src="/app/js/app.js"></script>
+    <script src="app/js/app.js"></script>
   </body>
 </html>
