--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="app/scss/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>EasyBank</title>
     <style>
       .attribution {
