--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon.svg"
+      href="images/favicon.svg"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
@@ -30,7 +30,7 @@
       <div class="overlay has-fade"></div>
       <nav class="container container--pall flex flex-jc-sb flex-ai-c">
         <a href="#" class="header__logo">
-          <img src="/images/logo.svg" alt="logo" />
+          <img src="images/logo.svg" alt="logo" />
         </a>
         <a id="btn-menu" href="#" class="header__toggle hide-for-desktop">
           <span></span>
