--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-online.svg" alt="" />
+              <img src="images/icon-online.svg" alt="" />
             </div>
             <div class="feature__title">Online Banking</div>
             <div class="feature__description">
@@ -89,7 +89,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-budgeting.svg" alt="" />
+              <img src="images/icon-budgeting.svg" alt="" />
             </div>
             <div class="feature__title">Simple Budgeting</div>
             <div class="feature__description">
@@ -99,7 +99,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-onboarding.svg" alt="" />
+              <img src="images/icon-onboarding.svg" alt="" />
             </div>
             <div class="feature__title">Fast Onboarding</div>
             <div class="feature__description">
@@ -109,7 +109,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-api.svg" alt="" />
+              <img src="images/icon-api.svg" alt="" />
             </div>
             <div class="feature__title">Open API</div>
             <div class="feature__description">
@@ -127,7 +127,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('images/image-currency.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -144,7 +144,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-restaurant.jpg')"
+              style="background-image: url('images/image-restaurant.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -161,7 +161,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-plane.jpg')"
+              style="background-image: url('images/image-plane.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -178,7 +178,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-confetti.jpg')"
+              style="background-image: url('images/image-confetti.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -198,7 +198,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="/images/logo-dark.svg" />
+          <img src="images/logo-dark.svg" />
         </a>
         <div class="footer__social">
           <a href="#">
